Fix footer spacing for mobile

--- a/sass/modules/_footer.scss
+++ b/sass/modules/_footer.scss
@@ -2,8 +2,8 @@
 // -----------------------------------------------------------------------------
 .footer {
   .copyright {
-    padding-top: 19px;
-    margin: 19px 0 21px 0;
+    padding: 19px 0 21px;
+    margin-top: 19px;
     border-top: 1px solid $footerText;
   }
   p {
